--- a/AppGui/AppGui/Pages/PresentationPage.xaml
+++ b/AppGui/AppGui/Pages/PresentationPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AppGui.Pages"
       mc:Ignorable="d" 
+      xmlns:gif="http://wpfanimatedgif.codeplex.com"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PresentationPage">
 
@@ -16,5 +17,34 @@
         
         <TextBlock Grid.Row="0" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="{DynamicResource HeaderFontFamily}" FontSize="{DynamicResource HeaderFontSize}">Assistente Virtual</TextBlock>
         <Image Grid.Row="0" Source="..\Images\logo_ua.png" VerticalAlignment="Stretch" HorizontalAlignment="Right" Margin="7" />
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40*" />
+                <RowDefinition Height="10*" />
+                <RowDefinition Height="40*" />
+                <RowDefinition Height="10*" />
+                
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Row="0" Grid.Column="0" gif:ImageBehavior.AnimatedSource="..\Gif\canteen.gif" />
+            <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="18" Margin="10,0,0,0">Cantinas</TextBlock>
+
+            <Image Grid.Row="0" Grid.Column="1" gif:ImageBehavior.AnimatedSource="..\Gif\news.gif" />
+            <TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="18" Margin="10,0,0,0">Notícias</TextBlock>
+
+            <Image Grid.Row="0" Grid.Column="2" gif:ImageBehavior.AnimatedSource="..\Gif\parques.gif" />
+            <TextBlock Grid.Row="1" Grid.Column="2" VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="18" Margin="10,0,0,0">Parques de estacionamento</TextBlock>
+
+            <Image Grid.Row="2" Grid.Column="0" gif:ImageBehavior.AnimatedSource="..\Gif\weather.gif" />
+            <TextBlock Grid.Row="3" Grid.Column="0" VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="18" Margin="10,0,0,0">Tempo</TextBlock>
+
+            <Image Grid.Row="2" Grid.Column="1" gif:ImageBehavior.AnimatedSource="..\Gif\tickets.gif" />
+            <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="18" Margin="10,0,0,0">Tempo</TextBlock>
+            
+        </Grid>
     </Grid>
 </Page>
