--- a/GestureModality/GestureModality/MainWindow.xaml
+++ b/GestureModality/GestureModality/MainWindow.xaml
@@ -39,16 +39,13 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="1" x:Name="kinectStatus" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource SubHeaderFontSize}"></TextBlock>
+            <Border Margin="5" Grid.Column="1" Grid.Row="0" BorderBrush="SteelBlue" BorderThickness="2" CornerRadius="0">
+                <Viewbox x:Name="kinectBodyViewbox" >
+                    <Image Source="{Binding ImageSource}"/>
+                </Viewbox>
 
-            <Border Margin="5" Padding="5" Grid.Column="2" Grid.Row="0" BorderBrush="SteelBlue" BorderThickness="2" CornerRadius="0"
-          VerticalAlignment="Stretch">
-                <StackPanel Orientation="Vertical"  HorizontalAlignment="Center" VerticalAlignment="Stretch">
-                    <Viewbox x:Name="kinectBodyViewbox" Width="200" Height="200">
-                        <Image Source="{Binding ImageSource}"/>
-                    </Viewbox>
-                    <TextBlock Text="This program tracks the closest person to the kinect." TextWrapping="Wrap" Margin="5 10 5 5" Foreground="{StaticResource MediumGreyBrush}" FontFamily="Segoe UI" FontSize="14"/>
-                </StackPanel>
             </Border>
+
         </Grid>
 
         <k:KinectRegion x:Name="kinectRegion" Grid.Row="2" Background="LightGray">
